# CppNumericalSolvers

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt  main.cpp
include/cns/: problem.h
include/cns/linesearch/: morethuente.h
include/cns/solver/: lbfgsbsolver.h
include/cppoptlib/: problem.h
include/cppoptlib/linesearch/: morethuente.h
include/cppoptlib/solver/: bfgssolver.h  lbfgsbsolver.h  levenbergmarquardtsolver.h
lib/: CMakeLists.txt
lib/headers/: BfgsSolver.h  ConjugateGradientSolver.h  GradientDescentSolver.h  ISolver.h  LbfgsSolver.h  LbfgsbSolver.h  LevenbergMarquardtSolver.h  Meta.h  NewtonDescentSolver.h
lib/src/: BfgsSolver.cpp  ConjugateGradientSolver.cpp  GradientDescentSolver.cpp  ISolver.cpp  LbfgsSolver.cpp  LbfgsbSolver.cpp  LevenbergMarquardtSolver.cpp  NewtonDescentSolver.cpp
src/test/: verify.cpp
unittest/: CMakeLists.txt  unittests.cpp
